--- a/resources/css/sidebar.css
+++ b/resources/css/sidebar.css
@@ -13,4 +13,17 @@
     position: fixed;
     justify-content: space-between;
     max-width: var(--sidebar-width);
+    z-index: -1;
+}
+
+@media screen and (max-width: 576px) {
+    .sidebar {
+        display: flex;
+        max-width: 100%;
+        width: 100%;
+        background-color: #fbf4a0;
+        border-bottom: 3px solid #000;
+        border-left: none;
+        position: relative;
+    }
 }
